# environment_tracker

./: .env.example  .gitignore  PLAN_GENERATED.md  README.md  alembic.ini  docker-compose.yml  environment_tracker.db-shm  environment_tracker.db-wal  pyproject.toml
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: dd575ba70d24_initial_schema.py
data/geojson/: biomes.geojson  states.geojson
data/reference/: geographic_reference.json
specs/001-environmental-tracker/: plan.md  research.md  spec.md  tasks.md
specs/001-environmental-tracker/checklists/: requirements.md
src/: app.py
src/config/: constants.py  langfuse_config.py  settings.py
src/database/: connection.py  models.py  queries.py
src/models/: conversation.py  environmental.py  geographic.py  timeseries.py  validation.py
src/services/: data_export.py  llm_provider.py
src/services/analysis/: aggregator.py  geospatial.py  trend_analyzer.py
src/services/conversation/: conversation_engine.py  langfuse_wrapper.py  prompts.py  query_parser.py  response_generator.py  session_manager.py
src/services/inpe_integration/: base.py  cache_manager.py  (+3 more)
src/ui/: styles.py
src/utils/: date_utils.py  decorators.py  geo_utils.py  logging.py
tests/: conftest.py  ui_smoke.py
tests/contract/: test_inpe_schemas.py
tests/integration/: test_cache_manager.py
tests/unit/: test_aggregator.py  test_pydantic_models.py  test_query_parser.py  test_response_generator.py  test_trend_analyzer.py
(+10 files in other folders)
