[project]
name = "environment-tracker"
version = "0.1.0"
description = "Environmental Status Tracker for Brazil — conversational interface to INPE data (DETER, PRODES, FOGO)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # UI Framework
    "streamlit>=1.35.0",
    "streamlit-folium>=0.20.0",

    # LLM Orchestration
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",

    # LLM Observability
    "langfuse>=2.0.0",

    # LLM Providers
    "openai>=1.30.0",

    # Data Validation & Settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Geospatial
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "rasterio>=1.3.0",
    "pyproj>=3.6.0",

    # Visualization
    "plotly>=5.20.0",
    "folium>=0.17.0",

    # HTTP Client
    "httpx>=0.27.0",

    # Database & ORM
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    # Caching
    "redis>=5.0.0",

    # Utilities
    "tenacity>=8.3.0",
    "pytz>=2024.1",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "freezegun>=1.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-pytz",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "A"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
